# brittany

./: brittany.cabal  cabal.project  stack.yaml
data/: MyTest001.hs  MyTest002.hs  MyTest003.hs  MyTest004.hs  Test185.hs  Test225.hs  Test277.hs  Test286.hs  Test289.hs  Test294.hs  Test318.hs  Test32.hs  Test324.hs  Test33.hs  Test330.hs  Test34.hs  Test340.hs  Test344.hs  Test35.hs  Test388.hs  Test389.hs  Test39.hs  Test390.hs  Test397.hs  Test398.hs  Test399.hs  Test40.hs  Test400.hs  Test41.hs  Test43.hs  Test506.hs  Test514.hs  Test52.hs  Test524.hs  Test53.hs  Test54.hs  Test55.hs  Test56.hs  Test60.hs  Test61.hs  (+1 more)
exe/: BrittanyInvestigation.hs  Main.hs
source/test-suite/: Main.hs
source/test-suite/Language/Haskell/Brittany/Internal/Layouters/Module/: Tests.hs
src-literatetests/: 10-tests.blt  15-regressions.blt  30-tests-context-free.blt
src/Data/: Occurrences.hs
src/Data/List/: Reversed.hs
src/Data/Text/: Ext.hs
src/GHC/: PrettyInstances.hs
src/GHC/Parser/Annotation/: Ext.hs
src/Language/Haskell/: Brittany.hs
src/Language/Haskell/Brittany/: Internal.hs  Main.hs
src/Language/Haskell/Brittany/Internal/: Backend.hs  BackendUtils.hs  Config.hs  ExactPrintUtils.hs  Formatting.hs  LayouterBasics.hs  Obfuscation.hs  ParseModule.hs  PreludeUtils.hs  RecursionSchemes.hs  Types.hs  Utils.hs
src/Language/Haskell/Brittany/Internal/Config/: Types.hs
src/Language/Haskell/Brittany/Internal/Config/Types/: Instances.hs
src/Language/Haskell/Brittany/Internal/Layouters/: DataDecl.hs  Decl.hs  Expr.hs  Expr.hs-boot  IE.hs  Import.hs  Module.hs  Pattern.hs  Stmt.hs  Stmt.hs-boot  Type.hs
src/Language/Haskell/Brittany/Internal/Transformations/: Alt.hs  Columns.hs  Floating.hs  Indent.hs  Par.hs
src/Language/Haskell/Brittany/Layouters/: DataDecl.hs
test/: BrittanyTestSuite.hs
test/Language/Haskell/Brittany/Internal/Layouters/Module/: Tests.hs
