cabal-version: 2.2

name:                 brittany
version:              0.14.0.2
synopsis:             Haskell source code formatter
description:
  See <https://github.com/lspitzner/brittany/blob/master/README.md the README>.
  .
  If you are interested in the implementation, have a look at <https://github.com/lspitzner/brittany/blob/master/doc/implementation/theory.md this document>;
  .
  The implementation is documented in more detail <https://github.com/lspitzner/brittany/blob/master/doc/implementation/index.md here>.
license:              AGPL-3.0-only
license-file:         LICENSE
author:               Lennart Spitzner
maintainer:           Lennart Spitzner <hexagoxel@hexagoxel.de>
copyright:            Copyright (C) 2016-2019 Lennart Spitzner
                      Copyright (C) 2019 PRODA LTD
                      Copyright (C) 2022 Sergey Vinokurov
category:             Language
build-type:           Simple
homepage:             https://github.com/lspitzner/brittany/
bug-reports:          https://github.com/lspitzner/brittany/issues
extra-doc-files:
  ChangeLog.md
  README.md
  doc/implementation/*.md
extra-source-files:
  data/brittany.yaml
  data/*.hs

source-repository head
  type: git
  location: https://github.com/lspitzner/brittany.git

flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True

common ghc-options
  default-language:
    Haskell2010

  ghc-options:
    -Weverything
    -Wno-type-defaults
    -Wno-implicit-prelude
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if flag(pedantic)
    ghc-options: -Werror

library
  -- import: ghc-options

  autogen-modules:
    Paths_brittany

  hs-source-dirs:
    src

  exposed-modules:
    Data.Occurrences
    Data.List.Reversed
    GHC.Parser.Annotation.Ext
    Language.Haskell.Brittany
    Language.Haskell.Brittany.Internal
    Language.Haskell.Brittany.Internal.Backend
    Language.Haskell.Brittany.Internal.BackendUtils
    Language.Haskell.Brittany.Internal.Config
    Language.Haskell.Brittany.Internal.Config.Types
    Language.Haskell.Brittany.Internal.Config.Types.Instances
    Language.Haskell.Brittany.Internal.ExactPrintUtils
    Language.Haskell.Brittany.Internal.Formatting
    Language.Haskell.Brittany.Internal.LayouterBasics
    Language.Haskell.Brittany.Internal.Layouters.DataDecl
    Language.Haskell.Brittany.Internal.Layouters.Decl
    Language.Haskell.Brittany.Internal.Layouters.Expr
    Language.Haskell.Brittany.Internal.Layouters.IE
    Language.Haskell.Brittany.Internal.Layouters.Import
    Language.Haskell.Brittany.Internal.Layouters.Module
    Language.Haskell.Brittany.Internal.Layouters.Pattern
    Language.Haskell.Brittany.Internal.Layouters.Stmt
    Language.Haskell.Brittany.Internal.Layouters.Type
    Language.Haskell.Brittany.Internal.Obfuscation
    Language.Haskell.Brittany.Internal.ParseModule
    Language.Haskell.Brittany.Internal.Prelude
    Language.Haskell.Brittany.Internal.PreludeUtils
    Language.Haskell.Brittany.Internal.Transformations.Alt
    Language.Haskell.Brittany.Internal.Transformations.Columns
    Language.Haskell.Brittany.Internal.Transformations.Floating
    Language.Haskell.Brittany.Internal.Transformations.Indent
    Language.Haskell.Brittany.Internal.Transformations.Par
    Language.Haskell.Brittany.Internal.Types
    Language.Haskell.Brittany.Internal.Utils
    Language.Haskell.Brittany.Main
    Paths_brittany

    GHC.PrettyInstances

  build-depends:
    , aeson ^>= 2.0.1
    , base ^>= 4.16.0
    , butcher ^>= 1.3.3
    , bytestring ^>= 0.11.3
    , cmdargs ^>= 0.10.21
    , containers ^>= 0.6.4
    , czipwith ^>= 1.0.1
    , data-tree-print ^>= 0.1.0
    , deepseq ^>= 1.4.5
    , directory ^>= 1.3.6
    , extra ^>= 1.7.10
    , filepath ^>= 1.4.2
    , ghc ^>= 9.2.2
    , ghc-boot-th ^>= 9.2.2
    , ghc-exactprint ^>= 1.5
    , monad-memo ^>= 0.5.3
    , mtl ^>= 2.2.2
    , multistate ^>= 0.8.0
    , pretty ^>= 1.1.3
    , prettyprinter-combinators
    , random ^>= 1.2.1
    , safe ^>= 0.3.19
    , semigroups ^>= 0.19.2
    , strict ^>= 0.4.0
    , syb ^>= 0.7.2
    , text ^>= 1.2.5
    , transformers ^>= 0.5.6
    , uniplate ^>= 1.6.13
    , vector ^>= 0.12.3
    , yaml ^>= 0.11.7

  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-all-missed-specialisations
    -Wno-incomplete-uni-patterns
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
    -Wno-missing-kind-signatures

    -Wno-unused-imports
    -Wno-name-shadowing
    -Wno-unused-matches
    -Wno-redundant-constraints
  default-language:
    Haskell2010

executable brittany
  -- import: ghc-options

  hs-source-dirs:
    exe
  main-is:
    Main.hs

  build-depends:
    , base
    , brittany

  ghc-options:
    -rtsopts
    -threaded
    -Wno-unused-packages
  default-language:
    Haskell2010

test-suite brittany-test-suite
  import: ghc-options

  type:
    exitcode-stdio-1.0
  main-is:
    BrittanyTestSuite.hs
  hs-source-dirs:
    test
  other-modules:
    Language.Haskell.Brittany.Internal.Layouters.Module.Tests

  build-depends:
    , base
    , brittany
    , directory ^>= 1.3
    , filepath
    , ghc
    , ghc-exactprint
    , optparse-applicative ^>= 0.17
    , tasty ^>= 1.4
    , tasty-hunit ^>= 0.10
    , text ^>= 1.2 || ^>= 2.0

  ghc-options:
    -rtsopts
    -with-rtsopts "-M100M"
    -main-is BrittanyTestSuite
  default-language:
    Haskell2010

executable brittany-investigation
  import: ghc-options
  main-is:
    BrittanyInvestigation.hs
  other-modules:
    GHC.PrettyInstances
    Language.Haskell.Brittany.Internal.ParseModule
  hs-source-dirs:
    src
    exe
  build-depends:
    , base >= 4.9
    , ghc ^>= 9.2.2
    , ghc-exactprint ^>= 1.5
    , prettyprinter-combinators
    , text
    , transformers
  ghc-options:
    -rtsopts
    -main-is BrittanyInvestigation
  default-language:
    Haskell2010
